package com.ensias.ensiasattendease.models;

public enum AttendanceStatus {
    PRESENT, ABSENT, LATE, EXCUSED
}
