package com.ensias.ensiasattendease.services;

import java.util.List;


import com.ensias.ensiasattendease.models.StudentModel;

public interface StudentService {
    List<StudentModel> getAllStudent() ; 
    
}
